<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tutor_registration">Tutor Registration</string>

    <!-- RegEx Strings -->
    <string name="name_regex">^[A-Z][:alpha:]*\\s[A-Z][:alpha:]*$</string>
    <string name="email_regex">^[:alpha:]*\Q@\E[:alpha:]*\Q.\E[:alpha:]{2,3}</string>

    <!-- Error messages -->
    <string name="name_error">Please enter your first and last names.</string>
    <string name="email_error">Please enter a valid email address.</string>
    <string name="name_email_error">Name and email both invalid.</string>
    <string name="address_error">You must enter a valid address.</string>
    <string name="college_error">Invalid college name.</string>
    <string name="registration_complete">Registration successful!</string>
    <string name="college_search_error">No tutors found with those search parameters.</string>
    <string name="review_submitted">Congratulations! Your review was submitted.</string>
    <string name="review_fail">Unable to connect to the server.</string>
    <string name="enter_text">You have to actually write something in your review…</string>
    <string name="review_reported">This review has been reported for administrative review.</string>

    <!-- Dialog buttons -->
    <string name="alert_dialog_ok">OK</string>

    <!-- General Use -->
    <string name="app_name">Drop In Tutor Me</string>
    <string name="title_font_size">35dp</string>
    <string name="link_font_size">25dp</string>
    <string name="standard_font_size">15dp</string>

    <!-- This line is used to change the bar at the top. Currently there are backgrounds 1-9 -->
    <string name="background_chosen">@drawable/background2</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Labels -->
    <string name="title_activity_online_resources">OnlineResources</string>
    <string name="title_activity_standard_tutor_search">CollegeTutorSearch</string>
    <string name="title_activity_test_database">testDatabase</string>

    <!-- Main Menu -->
    <string name="chose_college">Enter a College</string>
    <string name="freelance_tutor_search">Freelance Tutor Search</string>
    <string name="online_resources">Online Resources</string>
    <string name="freelance_sign_up">Freelance Sign-up</string>

    <!-- Online Resources -->
    <string name="online_tutoring"><a href="http://www.smarthinking.com/">Smarthinking Online Tutoring</a></string>
    <string name="khan_academy"><a href="https://www.khanacademy.org">Khan Academy</a></string>
    <string name="mit_open_courseware"><a href="http://ocw.mit.edu/index.htm">MIT OpenCourseWare</a></string>
    <string name="title_activity_tutor_review">tutorReview</string>
    <string name="title_activity_tutor_profile">tutorProfile</string>

    <!-- Standard Tutor Search -->
    <string name="subject_prompt">Subject</string>
    <string name="course_prompt">Course</string>

    <!-- Tutor Profile -->
    <string name="tutor_name">Name: </string>
    <string name="college_name">College: </string>
    <string name="location">Location: </string>
    <string name="subject">Subject: </string>
    <string name="bio">Bio: </string>
    <string name="courses">Courses: </string>
    <string name="schedule">Schedule: </string>
    <string name="email">Email: </string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="open_map">Open Map</string>
    <string name="title_activity_list_of_tutors">ListOfTutors</string>
    <string name="title_activity_search_narrower">CollegeSearchNarrower</string>

    <!-- Tutor Reviews -->
    <string name="enter_review">Enter your review</string>
    <string name="report_review">Report Review</string>
    <string name="submit_review">Submit Review</string>

    <!-- Search narrower adapter arrays -->

    <string-array name="days_array">
        <item>Any</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="times_array">
        <!--<item>"00:00"</item>
        <item>"00:30"</item>
        <item>"01:00"</item>
        <item>"01:30"</item>
        <item>"02:00"</item>
        <item>"02:30"</item>
        <item>"03:00"</item>
        <item>"03:30"</item>        Commented out. Not sure we need AM hours
        <item>"04:00"</item>
        <item>"04:30"</item>
        <item>"05:00"</item>
        <item>"05:30"</item>
        <item>"06:00"</item>
        <item>"06:30"</item>
        <item>"07:00"</item>
        <item>"07:30"</item>-->
        <item>"08:00"</item>
        <item>"08:30"</item>
        <item>"09:00"</item>
        <item>"09:30"</item>
        <item>"10:00"</item>
        <item>"10:30"</item>
        <item>"11:00"</item>
        <item>"11:30"</item>
        <item>"12:00"</item>
        <item>"12:30"</item>
        <item>"13:00"</item>
        <item>"13:30"</item>
        <item>"14:00"</item>
        <item>"14:30"</item>
        <item>"15:00"</item>
        <item>"15:30"</item>
        <item>"16:00"</item>
        <item>"16:30"</item>
        <item>"17:00"</item>
        <item>"17:30"</item>
        <item>"18:00"</item>
        <item>"18:30"</item>
        <item>"19:00"</item>
        <item>"19:30"</item>
        <item>"20:00"</item>
        <item>"20:30"</item>
        <item>"21:00"</item>
        <item>"21:30"</item>
        <item>"22:00"</item>
        <item>"22:30"</item>
        <item>"23:00"</item>
        <item>"23:30"</item>
    </string-array>

    <string name="title_activity_review_list">ReviewList</string>
    <string name="title_activity_freelance_search_narrower">FreelanceSearchNarrower</string>
    <string name="title_activity_freelance_profile">FreelanceProfile</string>

</resources>
