<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@string/background_chosen"
    tools:context="com.cs410tutorgroup.findatutor.tutorProfile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        android:elegantTextHeight="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/tutorNameHeader"
        android:textColor="#FFF"
        android:layout_gravity="top|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/tutorPhoto"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/test_face"
        android:scaleType="fitXY"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutor_name"
        android:id="@+id/tutorName"
        android:layout_alignTop="@id/tutorPhoto"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:textSize="@dimen/standard_font_size"
        android:layout_toEndOf="@id/tutorPhoto"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:id="@+id/tutorCollege"
        android:layout_below="@id/tutorName"
        android:layout_toEndOf="@id/tutorPhoto"
        android:textSize="@dimen/standard_font_size"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/tutorLocation"
        android:layout_below="@id/tutorCollege"
        android:layout_toEndOf="@id/tutorPhoto"
        android:textSize="@dimen/standard_font_size"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:id="@+id/tutorSubject"
        android:layout_below="@+id/tutorLocation"
        android:layout_toEndOf="@id/tutorPhoto"
        android:textSize="@dimen/standard_font_size"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/reviews"
        android:id="@+id/reviewButton"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="onReviewButtonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/open_map"
        android:id="@+id/mapButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/BioScroll"
        android:layout_below="@id/tutorPhoto"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:id="@+id/tutorBio"
            android:textSize="@dimen/standard_font_size"
            android:layout_marginRight="15dp"
            android:layout_alignTop="@id/BioScroll"
            android:layout_alignParentStart="true" />
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:id="@+id/CourseScroll"
        android:layout_marginRight="15dp"
        android:layout_below="@id/BioScroll"
        android:foregroundGravity="top"
        android:nestedScrollingEnabled="false"
        android:textAlignment="viewStart"
        android:layout_alignParentStart="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:id="@+id/tutorCourses"
            android:textSize="@dimen/standard_font_size"
            android:layout_marginRight="15dp"
            android:textAlignment="gravity"
            android:layout_alignTop="@id/CourseScroll"
            android:layout_alignParentStart="true" />
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ScheduleScroll"
        android:layout_marginRight="15dp"
        android:layout_above="@id/reviewButton"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/CourseScroll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:id="@+id/tutorSchedule"
            android:textSize="@dimen/standard_font_size"
            android:layout_marginRight="15dp"
            android:layout_alignTop="@id/BioScroll"
            android:layout_alignParentStart="true" />
    </ScrollView>

</RelativeLayout>

